Pod-restaurateur/deployment.yaml
# V2 AVEC FRONTEND NEXT.JS OPÉRATIONNEL
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-restaurateur
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pod-restaurateur
  template:
    metadata:
      labels:
        app: pod-restaurateur
    spec:
      containers:
        - name: postgres-container
          image: postgres:15
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-storage

        - name: restaurateur-api-container
          image: antoinecvlz/goodfood-restaurateur-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
        - name: restaurateur-web-container
          image: antoinecvlz/goodfood-restaurateur-web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
