Pod-restaurateur/restaurateur-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-restaurateur
  namespace: restaurateur
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pod-restaurateur
  template:
    metadata:
      labels:
        app: pod-restaurateur
    spec:
      containers:
        - name: restaurateur-db-container
          image: postgres:15
          imagePullPolicy: Always
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 5434
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: restaurateur-storage

        - name: restaurateur-api-container
          image: goodfoodrestaurateur
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3002
          volumeMounts:
            - mountPath: /app/uploads
              name: uploads-storage
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "1024Mi" 

      volumes:
        - name: restaurateur-storage
          persistentVolumeClaim:
            claimName: restaurateur-pvc
        - name: uploads-storage
          persistentVolumeClaim:
            claimName: restaurateur-uploads-pvc
