Pod-restaurateur/restaurateur-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restaurateur-service
  namespace: restaurateur
spec:
  selector:
    app: pod-restaurateur
  ports:
    - name: db-port
      protocol: TCP
      port: 5434
      targetPort: 5434
    - name: api-port
      protocol: TCP
      port: 3002
      targetPort: 3002
  type: ClusterIP  # Traefik gère le routage
