Pod-restaurateur/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restaurateur-service
spec:
  selector:
    app: pod-restaurateur
  ports:
    - name: db-port
      protocol: TCP
      port: 5434  # PostgreSQL (peut être utilisé pour des connexions externes)
      targetPort: 5434
    - name: api-port
      protocol: TCP
      port: 3002
      targetPort: 3002
    - name: web-port
      protocol: TCP
      port: 4002
      targetPort: 4002
  type: ClusterIP  # Traefik gère le routage
