Pod-restaurateur/restaurateur-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: restaurateur-ingress
  namespace: restaurateur
spec:
  entryPoints:
    - web
  routes:
    # Route pour l'API (/restaurateur/api/...)
    - match: PathPrefix(`/restaurateur/api`)
      kind: Rule
      priority: 12
      services:
        - name: restaurateur-service
          namespace: restaurateur
          port: 3002
      middlewares:
        - name: strip-restaurateur-api-prefix
          namespace: restaurateur
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-restaurateur-api-prefix
  namespace: restaurateur
spec:
  stripPrefix:
    prefixes:
      - /restaurateur/api
